[package]
name = "pytorch-cpuinfo-pieces"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/open-runtime/pytorch-cpuinfo"
description = "Rust wrappers for cpuinfo library"
readme = "README.md"
license = "BSD-2-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.13.0"
cfg-if = "1.0.0"

[build-dependencies]
cmake = "0.1"
bindgen = "0.61.0"
build-target = "0.4.0"
